delete yellow background color

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
 
   <div class="menu">
-    <p>Select Country</p>
-    <select id="selectoption" class="menuchoice"></select>
+    <select id="selectoption" class="menuchoice">
+      <option value="" selected hidden>Select country</option>
+    </select>
     <p id="total"></p>
   </div>
 
