add intro text and display logo and source

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 
   <div class="menu">
     <select id="selectoption" class="menuchoice">
-      <option value="" selected hidden>Select country</option>
+      <option value="" selected hidden>Select a country </option>
     </select>
-    <p id="total"></p>
+    <p id="total">to see its military expenses and top suppliers</p>
+  </div>
+
+
   </div>
 
   <div id="graphic"></div>
