add-arrow-to-selectbox

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
 
   <div class="menu">
-    <select id="selectoption" class="menuchoice">
-      <option value="" selected hidden>Select a country </option>
-    </select>
+    <div class="custom-selectbox">
+      <select id="selectoption" class="menuchoice">
+        <option value="" selected hidden>Select a country </option>
+      </select>
+    </div>
     <p id="total">to see its military expenses and top suppliers</p>
   </div>
 
